# kenon

./: .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  quickstart.md
docs/api/: backbone.md  cooccurrence.md  embeddings.md  graphs.md  tokenizer.md
docs/examples/: comparing_two_texts.md  multilingual_analysis.md  news_article_analysis.md
examples/: comparing_two_texts.py  multilingual_analysis.py  news_article_analysis.py
experiments/google_and_the_mind/: README.md  findings.md  google_and_the_mind.ipynb
experiments/google_and_the_mind/scripts/: __init__.py  build_graphs.py  download_data.py  evaluate.py  find_best.py  utils.py
experiments/semantic_explorer/: README.md
experiments/semantic_explorer/app/: README.md  index.html
experiments/semantic_explorer/data/json/: beyond_good_and_evil.json  frankenstein.json  moby_dick.json  nelson_norms.json  origin_of_species.json  pride_and_prejudice.json  the_republic.json  wealth_of_nations.json
experiments/semantic_explorer/scripts/: build_graphs.py  download_books.py  download_norms.py  export_json.py
src/kenon/: __init__.py  _types.py  backbone.py  cooccurrence.py  embeddings.py  graphs.py  stopwords.py  tokenizer.py
tests/: conftest.py  strategies.py  test_backbone.py  test_cooccurrence.py  test_embeddings.py  test_graphs.py  test_stopwords.py  test_tokenizer.py
